--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1,5 +1,5 @@
 {
-  "name": "bohne_portfolio_02",
+  "name": "bohne_portfolio_03",
   "firstRun": false,
   "exportConfig": true,
   "fileConfigs": [],
@@ -22,20 +22,26 @@
   },
   "imports": [
     {
-      "path": "sass/style.sass",
+      "path": "index.pug",
       "imports": [
-        "sass/_reset.sass"
+        "includes/circle.pug"
       ]
     },
     {
       "path": "vita.pug",
       "imports": [
-        "includes/nav.pug"
+        "includes/circle.pug"
+      ]
+    },
+    {
+      "path": "sass/style.sass",
+      "imports": [
+        "sass/_reset.sass"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
@@ -76,7 +82,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7880,
+    "port": 7881,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
